--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -45,6 +45,23 @@
               "isDefault": true
             },
             "problemMatcher": []
-          }
+          },
+          {
+            "label": "PPT Creator Prompt",
+            "type": "shell",
+            "command": "python",
+            "args": [
+                "creation/prompt.py"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "problemMatcher": [],
+            "detail": "Run json_to_ppt_v8.py to convert JSON into PowerPoint.",
+            "runOptions": {
+                "runOn": "folderOpen"
+            },
+        },
     ]
 }
