--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -47,11 +47,28 @@
             "problemMatcher": []
           },
           {
-            "label": "PPT Creator Prompt",
+            "label": "English Conversation ",
             "type": "shell",
             "command": "python",
             "args": [
                 "creation/prompt.py"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "problemMatcher": [],
+            "detail": "Run json_to_ppt_v8.py to convert JSON into PowerPoint.",
+            "runOptions": {
+                "runOn": "folderOpen"
+            },
+        },
+        {
+            "label": "Hindi Conversation",
+            "type": "shell",
+            "command": "python",
+            "args": [
+                "creation/hindi_prompt_creator.py"
             ],
             "group": {
                 "kind": "build",
