added the code text

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -42,7 +42,7 @@
             "problemMatcher": []
         },
         {
-            "label": "PPT data generate",
+            "label": "Prompts Data",
             "type": "shell",
             "command": "python",
             "args": [
